# spark-jdbc-ingestor

./: README.md  pyproject.toml
src/spark-jdbc-ingestor/: main.py
src/spark_jdbc_ingestor/: __init__.py  main.py
