[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-jdbc-ingestor"
version = "1.0.0"
description = "A library to handle JDBC ingestion from a SQL database in a simple and efficient way."
readme = "README.md"
authors = [{ name = "Eduardo Franceschi", email = "eduardo.franceschi@databricks.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["spark", "jdbc", "ingestor", "ingestion"]
dependencies = [
    "pyspark>=3.0.0",
    "logging>=0.4",
    "datetime>=5.0",
]
requires-python = ">=3.7"